refactor: functional interface impl, predicates