@@ -4,12 +4,12 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 
-public class PredicateStreams {
-    /**
-     * The Predicate functional interface within the Stream API is used to perform filtering operations on elements
-     * within a stream based on some condition.
-     * Several methods in the Stream API utilize the Predicate interface:
-     * */
+/**
+ * The Predicate functional interface within the Stream API is used to perform filtering operations on elements
+ * within a stream based on some condition.
+ * Several methods in the Stream API utilize the Predicate interface:
+ * */
+public class CPredicateStreams {
     public static void main(String[] args) {
         /*
         * filter: The filter method takes a Predicate as an argument and returns a stream consisting of elements
@@ -17,7 +17,7 @@ public class PredicateStreams {
         * */
         // Example
         List<Integer> numbers = Arrays.asList(1, 2, 3, 4, 5);
-        List<Integer> evenNumbers = numbers.stream().filter(n -> n % 2 == 0).collect(Collectors.toList());
+        List<Integer> evenNumbers = numbers.stream().filter(n -> n % 2 == 0).toList();
         System.out.println("evenNumbers = " + evenNumbers);
 
         /*
